--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -1,5 +1,11 @@
 {
   "main": {
-    "header": "ピターリ　ドミニク"
+    "greeting": "こんにちは",
+    "name": "私はピターリドミニクです",
+    "rolePrefix": "私は",
+    "role1": "ソフトウェア・エンジニアです",
+    "role2": "フロントエンド開発者です",
+    "role3": "ゲームデザイナーです",
+    "role4": "プログラマーです"
   }
 }
