--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -1,5 +1,6 @@
 {
   "main": {
+    "homeHeader": "ホーム",
     "greeting": "こんにちは",
     "name": "私はピターリドミニクです",
     "rolePrefix": "私は",
@@ -7,6 +8,7 @@
     "role2": "フロントエンド開発者です",
     "role3": "ゲームデザイナーです",
     "role4": "プログラマーです",
+    "projectsHeader": "プロジェクト",
     "candlelightTitle": "キャンドルライト",
     "candlelightDescription": "フルスタック生産性ソリューション",
     "candlelightContent": "ユーザー認証を中心とした堅牢なフルスタックプロジェクトを開発し、ユーザーアカウントをシームレスに保護。このプラットフォームは、ユーザーが作成したメモやタスクを効率的にロード・管理し、ユーザーに合理的で安全な体験を提供します。",
@@ -15,6 +17,8 @@
     "projectMVCContent": "ユーザー認証を中心とした堅牢なフルスタックプロジェクトを開発し、ユーザーアカウントをシームレスに保護。このプラットフォームは、ユーザーが作成したメモやタスクを効率的にロード・管理し、ユーザーに合理的で安全な体験を提供します。",
     "projectLuminaTitle": "プロジェクトルミナ",
     "projectLuminaDescription": "2Dアクションプラットフォーマー",
-    "projectLuminaContent": "ユーザー認証を中心とした堅牢なフルスタックプロジェクトを開発し、ユーザーアカウントをシームレスに保護。このプラットフォームは、ユーザーが作成したメモやタスクを効率的にロード・管理し、ユーザーに合理的で安全な体験を提供します。"
+    "projectLuminaContent": "ユーザー認証を中心とした堅牢なフルスタックプロジェクトを開発し、ユーザーアカウントをシームレスに保護。このプラットフォームは、ユーザーが作成したメモやタスクを効率的にロード・管理し、ユーザーに合理的で安全な体験を提供します。",
+    "aboutHeader": "自分について",
+    "about": "スケーラブルなアプリケーションの構築から複雑な課題への取り組みまで、私の卓越性へのコミットメントは揺るぎません。私は永続的な成長の力を信じています。業界の最新トレンドに飛び込むにせよ、最先端技術を試すにせよ、私は常に自分の知識ベースを広げることに貪欲です。独学でエンジニアになった私の歩みは、常に時代の先端を行き、進化し続ける技術状況を受け入れることへの献身を反映しています。ゲームやウェブ開発における最新の進歩に常にアンテナを張っているため、最先端の機能を統合し、ゲームやウェブ体験全体を向上させることができます。ユーザーの期待に応えるだけでなく、それを超えるゲームやソフトウェアを生み出すためには、品質へのこだわりと細部へのこだわりが欠かせません。"
   }
 }
