--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "main": {
+    "homeHeader": "Home",
     "greeting": "Hello",
     "name": "I'm Domenic Pittari",
     "rolePrefix": "I'm a ",
@@ -7,6 +8,7 @@
     "role2": "Front-End Developer",
     "role3": "Game Designer",
     "role4": "Programmer",
+    "projectsHeader": "Projects",
     "candlelightTitle": "Candlelight",
     "candlelightDescription": "Full-Stack Productivity Solution",
     "candlelightContent": "Developed a robust full-stack project centered around user authentication, seamlessly securing user accounts. The platform efficiently loads and manages user-created notes and tasks, providing a streamlined and secure experience for users.",
@@ -15,6 +17,8 @@
     "projectMVCContent": "Immerse yourself in a dynamic battlefield where waves of enemies relentlessly challenge your skills. The game features a sophisticated enemy wave spawner system that keeps players on their toes, ensuring an ever-intensifying experience.",
     "projectLuminaTitle": "Project Lumina",
     "projectLuminaDescription": "2D Action Platformer",
-    "projectLuminaContent": "Embark on a relentless journey through the ever-changing landscapes of Lumina, a dynamic roguelite adventure that challenges players with procedurally generated levels and an extensible character controller."
+    "projectLuminaContent": "Embark on a relentless journey through the ever-changing landscapes of Lumina, a dynamic roguelite adventure that challenges players with procedurally generated levels and an extensible character controller.",
+    "aboutHeader": "About",
+    "about": "From building scalable applications to tackling complex challenges, my commitment to excellence is unwavering. I believe in the power of perpetual growth. Whether diving into the latest industry trends or experimenting with cutting-edge technologies, I am always eager to expand my knowledge base. My journey as a self-taught engineer reflects a dedication to staying ahead of the curve and embracing the ever-evolving tech landscape. I consistently stay updated on the latest advancements in game and web development, allowing me to integrate cutting-edge features and elevate the overall gaming and web experience. My dedication to quality and attention to detail have been integral in producing games and software that not only meet but exceed user expectations."
   }
 }
