added project card github link

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,6 +19,6 @@
     "projectLuminaDescription": "2D Action Platformer",
     "projectLuminaContent": "Embark on a relentless journey through the ever-changing landscapes of Lumina, a dynamic roguelite adventure that challenges players with procedurally generated levels and an extensible character controller.",
     "aboutHeader": "About",
-    "about": "From building scalable applications to tackling complex challenges, my commitment to excellence is unwavering. I believe in the power of perpetual growth.\n\n Whether diving into the latest industry trends or experimenting with cutting-edge technologies, I am always eager to expand my knowledge base. My journey as a self-taught engineer reflects a dedication to staying ahead of the curve and embracing the ever-evolving tech landscape."
+    "about": "From building scalable applications to tackling complex challenges, my commitment to excellence is unwavering. I believe in the power of perpetual growth.\nWhether diving into the latest industry trends or experimenting with cutting-edge technologies, I am always eager to expand my knowledge base. My journey as a self-taught engineer reflects a dedication to staying ahead of the curve and embracing the ever-evolving tech landscape."
   }
 }
