--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -4,7 +4,7 @@
     "greeting": "こんにちは",
     "name": "私はピターリドミニクです",
     "rolePrefix": "私は",
-    "role1": "ソフトウェア・エンジニアです",
+    "role1": "ソフトウェアエンジニアです",
     "role2": "フロントエンド開発者です",
     "role3": "ゲームデザイナーです",
     "role4": "プログラマーです",
