--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,6 +8,8 @@
     "role2": "Front-End Developer",
     "role3": "Game Designer",
     "role4": "Programmer",
+    "role5": "Web Developer",
+    "role6": "React Developer",
     "projectsHeader": "Projects",
     "candlelightTitle": "Candlelight",
     "candlelightDescription": "Full-Stack Productivity Solution",
@@ -19,6 +21,6 @@
     "projectLuminaDescription": "2D Action Platformer",
     "projectLuminaContent": "Embark on a relentless journey through the ever-changing landscapes of Lumina, a dynamic roguelite adventure that challenges players with procedurally generated levels and an extensible character controller.",
     "aboutHeader": "About",
-    "about": "From building scalable applications to tackling complex challenges, my commitment to excellence is unwavering. I believe in the power of perpetual growth.\nWhether diving into the latest industry trends or experimenting with cutting-edge technologies, I am always eager to expand my knowledge base. My journey as a self-taught engineer reflects a dedication to staying ahead of the curve and embracing the ever-evolving tech landscape."
+    "about": "My journey as a programmer began in February 2020 when the COVID-19 pandemic led to everyone around the world to move to a working from home enviornment. During this time I experienced a major shift in my life when I finally made the long awaited decision to move to Japan to pursue my dreams and find my place in the world. I then began to proactively teach myself the essentials to software development including Javascript frameworks, back-end authentication and utilising various APIs. In my spare time at and after work, I would dedicate myself to learning all I could and implement my experience into producing various projects ranging from game development, full stack projects and web concepts. I am incredibly driven and dedicated to honing my skills as a programmer and am quick to adapt to the everchaning landscape that is software development. After almost 3 years of living in Japan, I am proud to say that I am still pursuing my dream and am excited for what my future holds for me."
   }
 }
