--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -8,6 +8,8 @@
     "role2": "フロントエンド開発者です",
     "role3": "ゲームデザイナーです",
     "role4": "プログラマーです",
+    "role5": "ウェブデベロッパー",
+    "role6": "リアクトプログラマー",
     "projectsHeader": "プロジェクト",
     "candlelightTitle": "キャンドルライト",
     "candlelightDescription": "フルスタック生産性ソリューション",
@@ -19,6 +21,6 @@
     "projectLuminaDescription": "2Dアクションプラットフォーマー",
     "projectLuminaContent": "ユーザー認証を中心とした堅牢なフルスタックプロジェクトを開発し、ユーザーアカウントをシームレスに保護。このプラットフォームは、ユーザーが作成したメモやタスクを効率的にロード・管理し、ユーザーに合理的で安全な体験を提供します。",
     "aboutHeader": "自分について",
-    "about": "スケーラブルなアプリケーションの構築から複雑な課題への取り組みまで、私の卓越性へのコミットメントは揺るぎません。私は永続的な成長の力を信じています。業界の最新トレンドに飛び込むにせよ、最先端技術を試すにせよ、私は常に自分の知識ベースを広げることに貪欲です。独学でエンジニアになった私の歩みは、常に時代の先端を行き、進化し続ける技術状況を受け入れることへの献身を反映しています。ゲームやウェブ開発における最新の進歩に常にアンテナを張っているため、最先端の機能を統合し、ゲームやウェブ体験全体を向上させることができます。ユーザーの期待に応えるだけでなく、それを超えるゲームやソフトウェアを生み出すためには、品質へのこだわりと細部へのこだわりが欠かせません。"
+    "about": "私のプログラマーとしての旅は、COVID-19のパンデミックによって世界中の誰もが在宅勤務の環境に移行した2020年2月に始まりました。この間、私は自分の夢を追い求め、自分の居場所を見つけるために、待ちに待った日本への移住を決断し、人生の大きな転機を経験しました。その後、Javascriptのフレームワーク、バックエンドの認証、様々なAPIの活用など、ソフトウェア開発に必要なことを積極的に独学で学び始めました。仕事中や仕事後の空き時間には、できる限りのことを学び、ゲーム開発、フルスタックプロジェクト、ウェブコンセプトなど、さまざまなプロジェクトのプロデュースに自分の経験を活かしています。私はプログラマーとしてのスキルを磨くことに非常に意欲的で、献身的であり、ソフトウェア開発という常に変化する状況に素早く適応することができます。3年近く日本に住んでいますが、今でも自分の夢を追い続けていることを誇りに思っています"
   }
 }
