Improved about section

--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -21,6 +21,8 @@
     "projectLuminaDescription": "2Dアクションプラットフォーマー",
     "projectLuminaContent": "ユーザー認証を中心とした堅牢なフルスタックプロジェクトを開発し、ユーザーアカウントをシームレスに保護。このプラットフォームは、ユーザーが作成したメモやタスクを効率的にロード・管理し、ユーザーに合理的で安全な体験を提供します。",
     "aboutHeader": "自分について",
-    "about": "私のプログラマーとしての旅は、COVID-19のパンデミックによって世界中の誰もが在宅勤務の環境に移行した2020年2月に始まりました。この間、私は自分の夢を追い求め、自分の居場所を見つけるために、待ちに待った日本への移住を決断し、人生の大きな転機を経験しました。その後、Javascriptのフレームワーク、バックエンドの認証、様々なAPIの活用など、ソフトウェア開発に必要なことを積極的に独学で学び始めました。仕事中や仕事後の空き時間には、できる限りのことを学び、ゲーム開発、フルスタックプロジェクト、ウェブコンセプトなど、さまざまなプロジェクトのプロデュースに自分の経験を活かしています。私はプログラマーとしてのスキルを磨くことに非常に意欲的で、献身的であり、ソフトウェア開発という常に変化する状況に素早く適応することができます。3年近く日本に住んでいますが、今でも自分の夢を追い続けていることを誇りに思っています"
+    "hometown": "メルボルン, オーストラリア",
+    "location": "横浜, 日本",
+    "about": "私のプログラマーとしての旅は、COVID-19のパンデミックによって世界中の誰もが在宅勤務の環境に移行した2020年2月に始まりました。この間、私は自分の夢を追い求め、自分の居場所を見つけるために、待ちに待った日本への移住を決断し、人生の大きな転機を経験しました。\n\nその後、Javascriptのフレームワーク、バックエンドの認証、様々なAPIの活用など、ソフトウェア開発に必要なことを積極的に独学で学び始めました。仕事中や仕事後の空き時間には、できる限りのことを学び、ゲーム開発、フルスタックプロジェクト、ウェブコンセプトなど、さまざまなプロジェクトのプロデュースに自分の経験を活かしています。\n\n私はプログラマーとしてのスキルを磨くことに非常に意欲的で、献身的であり、ソフトウェア開発という常に変化する状況に素早く適応することができます。3年近く日本に住んでいますが、今でも自分の夢を追い続けていることを誇りに思っています"
   }
 }
