Added Project Zeus to projects

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -14,6 +14,9 @@
     "candlelightTitle": "Candlelight",
     "candlelightDescription": "Full-Stack Productivity Solution",
     "candlelightContent": "Developed a robust full-stack project centered around user authentication, seamlessly securing user accounts. The platform efficiently loads and manages user-created notes and tasks, providing a streamlined and secure experience for users.",
+    "weatherTitle": "Weather App",
+    "weatherDescription": "OpenWeather Weather App",
+    "weatherContent": "Built with Next.js, offers users up-to-date weather forecasts with accuracy and ease. Utilizing the OpenWeather API, users can simply enter their location to receive detailed weather information, including current conditions, hourly forecasts, and a 7-day outlook.",
     "projectMVCTitle": "Project MVC",
     "projectMVCDescription": "3D Shooter Game",
     "projectMVCContent": "Immerse yourself in a dynamic battlefield where waves of enemies relentlessly challenge your skills. The game features a sophisticated enemy wave spawner system that keeps players on their toes, ensuring an ever-intensifying experience.",
