--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -14,6 +14,9 @@
     "candlelightTitle": "キャンドルライト",
     "candlelightDescription": "フルスタック生産性ソリューション",
     "candlelightContent": "ユーザー認証を中心とした堅牢なフルスタックプロジェクトを開発し、ユーザーアカウントをシームレスに保護。このプラットフォームは、ユーザーが作成したメモやタスクを効率的にロード・管理し、ユーザーに合理的で安全な体験を提供します。",
+    "weatherTitle": "天気アプリ",
+    "weatherDescription": "OpenWeather 天気アプリ",
+    "weatherContent": "Next.jsで構築され、正確で簡単な最新の天気予報をユーザーに提供します。OpenWeather APIを利用し、ユーザーは現在地を入力するだけで、現在の状況、1時間ごとの予報、7日間の見通しなど、詳細な天気情報を受け取ることができます。",
     "projectMVCTitle": "プロジェクトMVC",
     "projectMVCDescription": "3Dシューティングゲーム",
     "projectMVCContent": "ユーザー認証を中心とした堅牢なフルスタックプロジェクトを開発し、ユーザーアカウントをシームレスに保護。このプラットフォームは、ユーザーが作成したメモやタスクを効率的にロード・管理し、ユーザーに合理的で安全な体験を提供します。",
