Added project muse details

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,6 +11,9 @@
     "role5": "Web Developer",
     "role6": "React Developer",
     "projectsHeader": "Projects",
+    "projectMuseTitle": "Project Muse",
+    "projectMuseDescription": "Gaming Social Media",
+    "projectMuseContent": "Utilising the SQL and user authentication capabilities of Supabase, and the server-side rendering in NextJS, I developed a powerful gaming social media platform. Users can write and read reviews from other users for games powered by the Rawg OpenAPI.",
     "candlelightTitle": "Candlelight",
     "candlelightDescription": "Full-Stack Productivity Solution",
     "candlelightContent": "Developed a robust full-stack project centered around user authentication, seamlessly securing user accounts. The platform efficiently loads and manages user-created notes and tasks, providing a streamlined and secure experience for users.",
