--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -11,6 +11,9 @@
     "role5": "ウェブデベロッパー",
     "role6": "リアクトプログラマー",
     "projectsHeader": "プロジェクト",
+    "projectMuseTitle": "プロジェクトミューズ",
+    "projectMuseDescription": "ゲーム ソーシャルメディア",
+    "projectMuseContent": "SupabaseのSQLとユーザー認証機能、NextJSのサーバーサイドレンダリングを利用して、強力なゲームソーシャルメディアプラットフォームを開発しました。ユーザーは、Rawg OpenAPIを利用したゲームのレビューを書いたり、他のユーザーのレビューを読んだりすることができます。",
     "candlelightTitle": "キャンドルライト",
     "candlelightDescription": "フルスタック生産性ソリューション",
     "candlelightContent": "ユーザー認証を中心とした堅牢なフルスタックプロジェクトを開発し、ユーザーアカウントをシームレスに保護。このプラットフォームは、ユーザーが作成したメモやタスクを効率的にロード・管理し、ユーザーに合理的で安全な体験を提供します。",
